Adiciona tela inicial e tela de help

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
     <script src="startScene.js"></script>
+    <script src="helpScene.js"></script>
     <script src="level1.js"></script>
     <script src="level2.js"></script>
-    <script src="endScene.js"></script>
+    <script src="endScene1.js"></script>
+    <script src="endScene2.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
